--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "pg": "^8.11.2",
+    "sequelize": "^6.32.1"
   }
 }
